# z2p-ocaml

./: dune-project  watch.sh  zero2prod.opam  zero2prod.opam.locked
lib/: dune  routes.ml  subscriptions.ml
scripts/: init_db.sh
test/: dune  server.ml  zero2prod.ml
test/e2e/: dune  e2e.ml
